--- a/index.html
+++ b/index.html
@@ -1,31 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta
-  name="description"
-  content="This Webpage is a solution to the Testimonials grid section challenge on Frontend Mentor"
-/>
-<meta
-  name="keywords"
-  content="html, css, javascript, frontend mentor, responsive web design, code, coding, vs code, github, responsive layout, Testimonials grid section challenge , frontend mentor challenge, Frontend Web Development, Frontend Mentor challenge solution"
-/>
-<meta name="author" content="Fahim Hossain" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="This Webpage is a solution to the Testimonials grid section challenge on Frontend Mentor"
+    />
+    <meta
+      name="keywords"
+      content="html, css, javascript, frontend mentor, responsive web design, code, coding, vs code, github, responsive layout, Testimonials grid section challenge , frontend mentor challenge, Frontend Web Development, Frontend Mentor challenge solution"
+    />
+    <meta name="author" content="Fahim Hossain" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="style.css">
-  
-  <title>Frontend Mentor | Testimonials grid section</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="style.css" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <!-- <style>
+    <title>Frontend Mentor | Testimonials grid section</title>
+
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style> -->
-</head>
-<body>
-  
-</body>
+  </head>
+  <body>
+    <main class="contianer">
+      <article class="card violet white-text">
+        <div class="img-div">
+          <img
+            class="profile-img violet-border"
+            src="./images/image-daniel.jpg"
+            alt="Image of Daniel Clifford"
+          />
+          <div class="account-info">
+            <p class="account-name">Daniel Clifford</p>
+            <p class="account-status">Verified Graduate</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <p class="bold">
+            I received a job offer mid-course, and the subjects I learned were
+            current, if not more so, in the company I joined. I honestly feel I
+            got every penny's worth.
+          </p>
+          <p class="normal">
+            “ I was an EMT for many years before I joined the bootcamp. I’ve
+            been looking to make a transition and have heard some people who had
+            an amazing experience here. I signed up for the free intro course
+            and found it incredibly fun! I enrolled shortly thereafter. The next
+            12 weeks was the best - and most grueling - time of my life. Since
+            completing the course, I’ve successfully switched careers, working
+            as a Software Engineer at a VR startup. ”
+          </p>
+        </div>
+      </article>
+      <article class="card dark-gray white-text">
+        <div class="img-div">
+          <img
+            class="profile-img"
+            src="./images/image-jonathan.jpg"
+            alt="Image of Jonathan Walters"
+          />
+          <div class="account-info">
+            <p class="account-name">Jonathan Walters</p>
+            <p class="account-status">Verified Graduate</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <p class="bold">The team was very supportive and kept me motivated</p>
+          <p class="normal">
+            “ I started as a total newbie with virtually no coding skills. I now
+            work as a mobile engineer for a big company. This was one of the
+            best investments I’ve made in myself. ”
+          </p>
+        </div>
+      </article>
+      <article class="card white kira">
+        <div class="img-div">
+          <img
+            class="profile-img"
+            src="./images/image-kira.jpg"
+            alt="Image of Kira Whittle"
+          />
+          <div class="account-info">
+            <p class="account-name">Kira Whittle</p>
+            <p class="account-status">Verified Graduate</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <p class="bold">
+            Such a life-changing experience. Highly recommended!
+          </p>
+          <p class="normal">
+            “ Before joining the bootcamp, I’ve never written a line of code. I
+            needed some structure from professionals who can help me learn
+            programming step by step. I was encouraged to enroll by a former
+            student of theirs who can only say wonderful things about the
+            program. The entire curriculum and staff did not disappoint. They
+            were very hands-on and I never had to wait long for assistance. The
+            agile team project, in particular, was outstanding. It took my
+            learning to the next level in a way that no tutorial could ever
+            have. In fact, I’ve often referred to it during interviews as an
+            example of my developent experience. It certainly helped me land a
+            job as a full-stack developer after receiving multiple offers. 100%
+            recommend! ”
+          </p>
+        </div>
+      </article>
+      <article class="card white jean">
+        <div class="img-div">
+          <img
+            class="profile-img"
+            src="./images/image-jeanette.jpg"
+            alt="Image of Jeanette Harmon"
+          />
+          <div class="account-info">
+            <p class="account-name">Jeanette Harmon</p>
+            <p class="account-status">Verified Graduate</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <p class="bold">An overall wonderful and rewarding experience</p>
+          <p class="normal">
+            “ Thank you for the wonderful experience! I now have a job I really
+            enjoy, and make a good living while doing something I love. ”
+          </p>
+        </div>
+      </article>
+      <article class="card dark-blue white-text">
+        <div class="img-div">
+          <img
+            class="profile-img violet-border"
+            src="./images/image-patrick.jpg"
+            alt="Image of Patrick Abrams"
+          />
+          <div class="account-info">
+            <p class="account-name">Patrick Abrams</p>
+            <p class="account-status">Verified Graduate</p>
+          </div>
+        </div>
+        <div class="testimonial">
+          <p class="bold">
+            Awsome teaching support from TAs who did the bootcamp themselves.
+            Getting guidence from them and learning from their experiences was
+            easy.
+          </p>
+          <p class="normal">
+            “ The staff seem genuinely concerned about my progress which I find
+            really refreshing. The program gave me the confidence necessary to
+            be able to go out in the world and present myself as a capable
+            junior developer. The standard is above the rest. You will get the
+            personal attention you need from an incredible community of smart
+            and amazing people. ”
+          </p>
+        </div>
+      </article>
+    </main>
+  </body>
 </html>
