--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Testimonials grid section</title>
-
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
   </head>
   <body>
     <main class="contianer">
@@ -163,5 +157,16 @@
         </div>
       </article>
     </main>
+    <footer class="attribution">
+      Challenge by
+      <a
+        href="https://www.frontendmentor.io/challenges/testimonials-grid-section-Nnw6J7Un7"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a href="https://www.frontendmentor.io/profile/Mr-NotSoCreative"
+        >Fahim Hossain</a
+      >.
+    </footer>
   </body>
 </html>
