--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             current, if not more so, in the company I joined. I honestly feel I
             got every penny's worth.
           </p>
-          <p class="normal">
+          <blockquote class="normal">
             “ I was an EMT for many years before I joined the bootcamp. I’ve
             been looking to make a transition and have heard some people who had
             an amazing experience here. I signed up for the free intro course
@@ -52,7 +52,7 @@
             12 weeks was the best - and most grueling - time of my life. Since
             completing the course, I’ve successfully switched careers, working
             as a Software Engineer at a VR startup. ”
-          </p>
+          </blockquote>
         </div>
       </article>
       <article class="card dark-gray white-text">
@@ -69,11 +69,11 @@
         </div>
         <div class="testimonial">
           <p class="bold">The team was very supportive and kept me motivated</p>
-          <p class="normal">
+          <blockquote class="normal">
             “ I started as a total newbie with virtually no coding skills. I now
             work as a mobile engineer for a big company. This was one of the
             best investments I’ve made in myself. ”
-          </p>
+          </blockquote>
         </div>
       </article>
       <article class="card white kira">
@@ -92,7 +92,7 @@
           <p class="bold">
             Such a life-changing experience. Highly recommended!
           </p>
-          <p class="normal">
+          <blockquote class="normal">
             “ Before joining the bootcamp, I’ve never written a line of code. I
             needed some structure from professionals who can help me learn
             programming step by step. I was encouraged to enroll by a former
@@ -105,7 +105,7 @@
             example of my developent experience. It certainly helped me land a
             job as a full-stack developer after receiving multiple offers. 100%
             recommend! ”
-          </p>
+          </blockquote>
         </div>
       </article>
       <article class="card white jean">
@@ -122,10 +122,10 @@
         </div>
         <div class="testimonial">
           <p class="bold">An overall wonderful and rewarding experience</p>
-          <p class="normal">
+          <blockquote class="normal">
             “ Thank you for the wonderful experience! I now have a job I really
             enjoy, and make a good living while doing something I love. ”
-          </p>
+          </blockquote>
         </div>
       </article>
       <article class="card dark-blue white-text">
@@ -146,14 +146,14 @@
             Getting guidence from them and learning from their experiences was
             easy.
           </p>
-          <p class="normal">
+          <blockquote class="normal">
             “ The staff seem genuinely concerned about my progress which I find
             really refreshing. The program gave me the confidence necessary to
             be able to go out in the world and present myself as a capable
             junior developer. The standard is above the rest. You will get the
             personal attention you need from an incredible community of smart
             and amazing people. ”
-          </p>
+          </blockquote>
         </div>
       </article>
     </main>
